--- a/styleTicTac.css
+++ b/styleTicTac.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap'); */
 * {
     margin: 0;
     padding: 0;
@@ -16,6 +16,75 @@ body {
     margin: 0px auto;
     /* border: 2px solid red; */
 }
+
+/* ------------Modal Container--------------- */
+.modal-container {
+    opacity: 0;
+    visibility: hidden;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100vh;
+    top:0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.modal-title {
+    position: relative;
+    /* margin-bottom: 5px; */
+    font-family: 'Kanit', sans-serif;
+    font-size: 40px;
+    text-align: center;
+    /* border: 2px solid blue;  */
+}
+.modal {
+    width: 40%;
+    height: 60%;
+    background: white;
+    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-evenly; */
+    position: relative;
+    transition: transform 1s;
+    transform: translateY(0%);
+    border-radius: 10px;
+    /* border: 2px solid blue;  */
+}
+.modal-text > h2 {
+    /* margin-bottom: 15px; */
+    /* border: 2px solid blue;  */
+}
+.modal-text > img {
+    width: 30%;
+    height: 40%;
+    /* margin: 10px; */
+    border: 2px solid #f11a1a;;
+    /* border: 2px solid blue;  */
+}
+.modal-close {
+    transform: translateY(-200%);
+}
+.close {
+    position: absolute;
+    display: inline-block;
+    top: 5px;
+    right: 5px;
+    width: 25px;
+    height: 25px;
+    background: #c44a4c;
+    color: white;
+    line-height: 25px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+/* ------------Title Container--------------- */
 .title-container {
     height: 15vh;
     margin-bottom: 10px;
@@ -114,7 +183,7 @@ body {
     /* border: 2px solid green; */
 }
 .ctrl-container {
-    border: 3px solid black;
+    /* border: 3px solid black; */
     background-color: #5f5c5c;
     background-color: #f11a1a;
     opacity: 0.8;
@@ -161,7 +230,6 @@ body {
 .player-active {
     background-color: rgba(49, 49, 49, 0.4);
     background-color: rgba(241, 26, 26, 0.63);
-
 }
 .player-active .player-label {
     font-weight: 300;
@@ -171,6 +239,7 @@ body {
     font-size: 70px;
     position: absolute;
     color:rgb(6, 156, 6);
+    color:black;
     left: 5px;
     top: -32px;
     right: -125px;
@@ -187,7 +256,7 @@ body {
     position: relative;
     /* border: 3px solid black; */
 }
-.btn {
+.btn {  
     position: absolute;
     transform: translateX(-50%);
     color: rgb(24, 23, 23);
@@ -204,8 +273,11 @@ body {
     background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(10px);
   
-    padding: 5% 10%;
-    border-radius: 9px; /*50rem; */
+    padding: 7px 0;
+    width: 100px;
+    border-radius: 50px;
+    /* padding: 5% 10%;
+    border-radius: 9px; 50rem; */
     box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1); 
 }
 .btn:active {
