--- a/styleTicTac.css
+++ b/styleTicTac.css
@@ -39,7 +39,7 @@ body {
     font-family: 'Kanit', sans-serif;
     font-size: 40px;
     text-align: center;
-    /* border: 2px solid blue;  */
+    border: 2px solid blue; 
 }
 .modal {
     width: 40%;
@@ -49,7 +49,7 @@ body {
     text-align: center;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
     position: relative;
     transition: transform 1s;
     transform: translateY(0%);
@@ -57,13 +57,12 @@ body {
     /* border: 2px solid blue;  */
 }
 .modal-text > h2 {
-    /* margin-bottom: 15px; */
-    /* border: 2px solid blue;  */
+    margin-bottom: 10px;
+    border: 2px solid blue; 
 }
 .modal-text > img {
     width: 30%;
     height: 40%;
-    /* margin: 10px; */
     border: 2px solid #f11a1a;;
     /* border: 2px solid blue;  */
 }
@@ -84,8 +83,8 @@ body {
     border-radius: 50%;
 }
 
-/* ------------Title Container--------------- */
-.title-container {
+/* ------------Headerr--------------- */
+header {
     height: 15vh;
     margin-bottom: 10px;
     /* border: 2px solid blue; */
@@ -107,71 +106,99 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    padding: 5px;
-    /* border: 2px solid yellow; */
+    padding: 0px;
 }
-.box-0 { 
-    grid-area: 1 / 1 / 2 / 2;
-    border-top: 0px;
-    border-right: 3px solid black;
-    border-bottom: 3px solid black;
-    border-left: 0px;
+.box {
+    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
+    border: 3px solid black;
+    position: relative;
+    /* background: red; */
 }
-.box-1 { 
-    grid-area: 1 / 2 / 2 / 3; 
-    border-top: 0px;
-    border-right: 3px solid black;
-    border-bottom: 3px solid black;
-    border-left: 3px solid black;
+.card{
+    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: all 0.5s ease;
+    /* background: chartreuse; */
+
 }
-.box-2 { 
-    grid-area: 1 / 3 / 2 / 4;
-    border-top: 0px;
-    border-right: 0px;
-    border-bottom: 3px solid black;
-    border-left: 3px solid black; 
+/* .card:hover{
+    transform: rotateY(180deg);
+} */
+.front {
+    
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background: blue;
+    color:#333;
+    transform: rotateY(180deg);
 }
-.box-3 { 
-    grid-area: 2 / 1 / 3 / 2;
-    border-top: 3px solid black;
-    border-right: 3px solid black;
-    border-bottom: 3px solid black;
-    border-left: 0px; 
+.back {
+    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    /* background: blue; */
+    color:#333;
+    transform: rotateY(180deg);
 }
-.box-4 { 
-    grid-area: 2 / 2 / 3 / 3;
-    border: 3px solid black; 
+.back > img {
+    position: absolute;
+    width: 90%;
+    height: 90%;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid blue;  
 }
-.box-5 { 
-    grid-area: 2 / 3 / 3 / 4;
-    border-top: 3px solid black;
-    border-right: 0px;
-    border-bottom: 3px solid black;
-    border-left: 3px solid black; 
+.box > img {
+    width: 90%;
+    height: 90%;
+    border: 2px solid #blue;  
+    /* visibility: hidden; */
+    /* margin: 10px; */  
+    /* position: fixed; */'
+   
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
 }
-.box-6 { 
-    grid-area: 3 / 1 / 4 / 2;
-    border-top: 3px solid black;
-    border-right: 3px solid black;
-    border-bottom: 0px;
-    border-left: 0px; 
+
+
+.box:nth-child(1),
+.box:nth-child(2),
+.box:nth-child(3) {
+    border-top: none;
 }
-.box-7 { 
-    grid-area: 3 / 2 / 4 / 3;
-    border-top: 3px solid black;
-    border-right: 3px solid black;
-    border-bottom: 0px;
-    border-left: 3px solid black; 
+.box:nth-child(1),
+.box:nth-child(4),
+.box:nth-child(7) {
+    border-left: none;
 }
-.box-8 { 
-    grid-area: 3 / 3 / 4 / 4;
-    border-top: 3px solid black;
-    border-right: 0px;
-    border-bottom: 0px;
-    border-left: 3px solid black; 
+.box:nth-child(3),
+.box:nth-child(6),
+.box:nth-child(9) {
+    border-right: none;
 }
+.box:nth-child(7),
+.box:nth-child(8),
+.box:nth-child(9) {
+    border-bottom: none;
+}
+
+
+
+
+
+
+
+
+
+/* ------ PLayers------- */
 .game-control  {
     height: 15vh;
     margin-top: 15px;
@@ -180,8 +207,11 @@ body {
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    
     /* border: 2px solid green; */
 }
+
+
 .ctrl-container {
     /* border: 3px solid black; */
     background-color: #5f5c5c;
@@ -195,9 +225,6 @@ body {
     text-align: center;
     transition: all 0.75s;
 }
-
-
-/* ------ PLayers------- */
 .player-label {
     text-transform: uppercase;
     margin-bottom: 0.2rem;
