--- a/styleTicTac.css
+++ b/styleTicTac.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap'); */
 * {
     margin: 0;
     padding: 0;
@@ -6,15 +5,25 @@
 }
 
 body {
-    font-family: Open Sans;
-    font-weight: 400;
-    color: rgb(44, 43, 43);
     background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
+    font-family: Open Sans;
+    font-weight: 600;
+    color: rgb(44, 43, 43);
     position: relative;
     height: 100vh;
     width: 100vh; 
     margin: 0px auto;
     /* border: 2px solid red; */
+}
+header {
+    height: 15vh;
+    margin-bottom: 10px;
+    /* border: 2px solid blue; */
+}
+span {
+    font-family: 'Kanit', sans-serif;
+    font-size: 22px;
+    
 }
 
 /* ------------Modal Container--------------- */
@@ -31,40 +40,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
-}
-.modal-title {
-    position: relative;
-    /* margin-bottom: 5px; */
-    font-family: 'Kanit', sans-serif;
-    font-size: 40px;
-    text-align: center;
-    border: 2px solid blue; 
-}
-.modal {
-    width: 40%;
-    height: 60%;
-    background: white;
-    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    position: relative;
-    transition: transform 1s;
-    transform: translateY(0%);
-    border-radius: 10px;
-    /* border: 2px solid blue;  */
-}
-.modal-text > h2 {
-    margin-bottom: 10px;
-    border: 2px solid blue; 
-}
-.modal-text > img {
-    width: 30%;
-    height: 40%;
-    border: 2px solid #f11a1a;;
-    /* border: 2px solid blue;  */
 }
 .modal-close {
     transform: translateY(-200%);
@@ -83,12 +58,89 @@ body {
     border-radius: 50%;
 }
 
-/* ------------Headerr--------------- */
-header {
-    height: 15vh;
-    margin-bottom: 10px;
+.modal {
+    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
+    width: 40%;
+    height: 60%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    /* justify-content:space-evenly; */
+    position: relative;
+    transition: transform 1s;
+    transform: translateY(0%);
+    border-radius: 10px;
+    /* border: 2px solid blue;  */
+}
+.modal-title {
+    margin-bottom: 0%;
+    
+}
+
+.modal-title > h1 {
+    font-family: 'Kanit', sans-serif;
+    font-size: 60px;
+    text-align: center;
+    margin-bottom: 0px;
+    /* border: 2px solid green; */
+}
+
+.modal-msg > h2 {
+    font-family: 'Kanit', sans-serif;
+    font-size: 25px;    
+    text-align: center;
+    position: flex;
+    justify-content: center; 
+    align-items: center;
+}
+.first-player {
+    position: relative;
+    top:0px;
+    margin: 0px;
     /* border: 2px solid blue; */
 }
+
+.modal-img {
+    width: 60%;
+    margin: 0px auto;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 130px;
+}
+.modal-img > img {
+    height: 70%;
+    margin: auto;
+    /* cursor: pointer;  */
+}
+.modal-img > img:hover {
+    align-items: center;
+    height: 100%;
+    padding: 3px;
+    border: 2px solid lime;
+    border-radius: 10px;
+    cursor: pointer; 
+}
+
+.modal-close {
+    transform: translateY(-200%);
+}
+.close {
+    position: absolute;
+    display: inline-block;
+    top: 5px;
+    right: 5px;
+    width: 25px;
+    height: 25px;
+    background: #c44a4c;
+    color: white;
+    line-height: 25px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+/* ------------Headerr--------------- */
+
 .title {
     position: relative;
     margin: 5px auto;
@@ -138,14 +190,15 @@ header {
     transform: rotateY(180deg);
 }
 .back {
+    /* background: blue; */
     background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    /* background: blue; */
     color:#333;
     transform: rotateY(180deg);
+       
 }
 .back > img {
     position: absolute;
@@ -153,22 +206,15 @@ header {
     height: 90%;
     justify-content: center;
     align-items: center;
-    border: 2px solid blue;  
+    border: 2px solid blue; 
+    margin: 5%;
 }
 .box > img {
     width: 90%;
     height: 90%;
-    border: 2px solid #blue;  
-    /* visibility: hidden; */
-    /* margin: 10px; */  
-    /* position: fixed; */'
-   
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    border: 2px solid blue;  
+  
 }
-
-
 .box:nth-child(1),
 .box:nth-child(2),
 .box:nth-child(3) {
@@ -213,8 +259,6 @@ header {
 
 
 .ctrl-container {
-    /* border: 3px solid black; */
-    background-color: #5f5c5c;
     background-color: #f11a1a;
     opacity: 0.8;
     border-radius: 9px;
@@ -303,8 +347,6 @@ header {
     padding: 7px 0;
     width: 100px;
     border-radius: 50px;
-    /* padding: 5% 10%;
-    border-radius: 9px; 50rem; */
     box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1); 
 }
 .btn:active {
@@ -314,6 +356,11 @@ header {
 .btn:focus {
     outline: none;
 } 
+.btn-modal {
+    background-color: rgb(184, 15, 15);
+    color: white;
+    margin-top: 5px;
+}
 .btn-start {
     top: 5%;
     
