--- a/styleTicTac.css
+++ b/styleTicTac.css
@@ -74,7 +74,8 @@ span {
 }
 .modal-title {
     margin-bottom: 0%;
-    
+    /* border: 2px solid black; 
+    border-radius: 5px; */
 }
 
 .modal-title > h1 {
@@ -111,7 +112,10 @@ span {
 .modal-img > img {
     height: 70%;
     margin: auto;
-    /* cursor: pointer;  */
+    cursor: pointer; 
+    padding: 3px;
+    border-radius: 10px;  
+
 }
 .modal-img > img:hover {
     align-items: center;
@@ -166,6 +170,7 @@ span {
     position: relative;
     /* background: red; */
 }
+/* -----------Card Flip-------------- */
 .card{
     background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
     position: absolute;
@@ -174,13 +179,11 @@ span {
     transform-style: preserve-3d;
     transition: all 0.5s ease;
     /* background: chartreuse; */
-
 }
 /* .card:hover{
     transform: rotateY(180deg);
 } */
 .front {
-    
     position: absolute;
     width: 100%;
     height: 100%;
@@ -198,9 +201,8 @@ span {
     backface-visibility: hidden;
     color:#333;
     transform: rotateY(180deg);
-       
 }
-.back > img {
+.box > img {
     position: absolute;
     width: 90%;
     height: 90%;
@@ -208,13 +210,15 @@ span {
     align-items: center;
     border: 2px solid blue; 
     margin: 5%;
+    /* visibility: hidden; */
 }
-.box > img {
+
+.box > img  {
     width: 90%;
     height: 90%;
     border: 2px solid blue;  
   
-}
+} 
 .box:nth-child(1),
 .box:nth-child(2),
 .box:nth-child(3) {
@@ -280,11 +284,11 @@ span {
 .player-score {
     font-size: 1.7rem;
 }
-.player-0 { 
+.player- { 
     grid-area: 1 / 1 / 2 / 2;
     /* border: 3px solid black; */
 }
-.player-1 { 
+.player-2 { 
     grid-area: 1 / 3 / 2 / 4;
     /* border: 3px solid black; */
 }
@@ -361,10 +365,16 @@ span {
     color: white;
     margin-top: 5px;
 }
-.btn-start {
+.btn-new-game {
     top: 5%;
+    visibility: visible;
+}
+.btn-next {
+    top: 5%;
+    visibility: hidden;
     
-}.btn-reset {     
+}
+.btn-reset {     
     top: 55%;
     margin-bottom:  4px;
 }
