--- a/styleTicTac.css
+++ b/styleTicTac.css
@@ -94,12 +94,12 @@ span {
     justify-content: center; 
     align-items: center;
 }
-.first-player {
+/* .first-player {
     position: relative;
     top:0px;
     margin: 0px;
-    /* border: 2px solid blue; */
-}
+    /* border: 2px solid blue; 
+} */
 
 .modal-img {
     width: 60%;
