--- a/styleTicTac.css
+++ b/styleTicTac.css
@@ -284,7 +284,7 @@ span {
 .player-score {
     font-size: 1.7rem;
 }
-.player- { 
+.player-1 { 
     grid-area: 1 / 1 / 2 / 2;
     /* border: 3px solid black; */
 }
