--- a/styleTicTac.css
+++ b/styleTicTac.css
@@ -195,8 +195,8 @@ span {
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
-    transition: all 0.5s ease;
-    /* background: chartreuse; */
+    transition: all 0.8s ease;
+    /* border: 2px solid chartreuse; */
 }
 .front {
     position: absolute;
@@ -205,6 +205,7 @@ span {
     backface-visibility: hidden;
     color:#333;
     transform: rotateY(180deg);
+    background-color: red;
 }
 .back {
     background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
@@ -214,6 +215,7 @@ span {
     backface-visibility: hidden;
     color:#333;
     transform: rotateY(180deg);
+    background-color: rgb(47, 0, 255);
 }
 .animal-img {
     position: absolute;
