--- a/pruebas/prueba.css
+++ b/pruebas/prueba.css
@@ -1,55 +1,55 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;  
 }
-
 body {
-    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
+    background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+    overflow: hidden;
     font-family: Open Sans;
     font-weight: 600;
     color: rgb(44, 43, 43);
     position: relative;
     height: 100vh;
-    width: 100vh; 
-    margin: 0px auto;
+    width: 70%; 
+    margin: 0 auto;
     /* border: 2px solid #db0adbcc; */
 }
-header {
-    height: 15vh;
-    margin-bottom: 10px;
+header {   
     /* border: 2px solid blue; */
-}
-span {
+    border-radius: 5px;
     font-family: 'Kanit', sans-serif;
-    font-size: 22px;
-    
-}
-/* ------------MAIN--------------- */
-
-/* ------------Headerr--------------- */
-.title {
-    position: relative;
-    margin: 5px auto;
-    font-family: 'Kanit', sans-serif;
-    font-size: 50px;
     text-align: center;
-    /* border: 2px solid aqua; */
+    color: rgb(44, 43, 43);;
+    font-size: 30px;
+    height: 15%;
+    position: relative;
 }
-/* ------------ GAME CONTAINER -------------- */
-.game-container {
+main {
+    /* border: 2px solid blue; */
+    height: 85%;
+    display: grid;
+    grid-template-columns: 25% auto 25%;
+    position:relative;
+}
+
+
+/* .right-container { border: 2px solid red;} */
+/* .center-container { border: 2px solid blue;} */
+/* .game-container {border: 2px solid black;}  */
+
+
+/* <!-- ========== GAME CONTAINER ========== --> */
+.boxes-container {
     height: 60vh;
     width: 60vh;
-    margin: 0px auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    padding: 0px;
+    margin: 15px auto;
+
 }
 .box {
-    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
     border: 3px solid black;
     position: relative;
 }
@@ -73,9 +73,9 @@ span {
 .box:nth-child(9) {
     border-bottom: none;
 }
-/* -----------Card Flip-------------- */
+/* <!-- ========== CARD FLIP ========== --> */
 .card{
-    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
+    /* background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%); */
     position: absolute;
     width: 100%;
     height: 100%;
@@ -93,7 +93,7 @@ span {
     /* background-color: red; */
 }
 .back {
-    background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
+    /* background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%); */
     position: absolute;
     width: 100%;
     height: 100%;
@@ -110,7 +110,82 @@ span {
     align-items: center;
     margin: 7%;
 }
+/* <!-- ========== PLAYER CONTAINER ========== --> */
+.player-container { 
+    font-family: 'Kanit', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:flex-end;
+}
+.player-img { 
+    border: 2px solid lime;
+    border-radius: 10px;
+    height:15vh;
+    width: 15vh;
+    margin: 10px auto;
+}
+.player {
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    border-radius: 5px;
+    color: black;
+    text-align: center;
+    width: 90%;
+    margin-bottom: 20%;
+    padding: 3px;
+}
+.player-label {
+    font-family: 'Kanit', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    color: black;
+    text-align: center;
+} 
+.player-score {
+    font-family: Open Sans;
+    font-size: 1.8rem;
+}
+/* <!-- ========== BUTTON CONTAINER ========== --> */
+.btn-container { 
+    font-family: 'Kanit', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:flex-end;
+}
+.input-container {
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    border-radius: 5px;
+    color: black;
+    text-align: center;
+    width: 0px auto;
+    margin-bottom: 20%;
+    padding: 3px;
+    
+}
 
+/* .btn {  
+    position: absolute;
+    transform: translateX(-50%);
+    color: rgb(24, 23, 23);
+    background: none;
+    border: none;
+    font-family: inherit;
+    font-size: 1 rem;
+    text-transform: uppercase;
+    cursor: pointer; 
+    font-weight: 400;
+    transition: all 0.2s;
+  
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
+  
+    padding: 7px 0;
+    width: 100px;
+    border-radius: 50px;
+    box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1); 
+} */
 /* ------------Modal Container--------------- */
 .modal-container {
     opacity: 0;
@@ -227,144 +302,3 @@ span {
     cursor: pointer;
     border-radius: 50%;
 }
-
-
-
-
-
-
-
-
-
-
-/* ------ PLayers------- */
-.game-control  {
-    height: 15vh;
-    margin-top: 15px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    
-    /* border: 2px solid green; */
-}
-
-
-.ctrl-container {
-    background-color: #f11a1a;
-    opacity: 0.8;
-    border-radius: 9px;
-    color: black;
-    position: relative;
-    margin: 5px auto;
-    width: 80%;
-    text-align: center;
-    transition: all 0.75s;
-}
-.player-label {
-    text-transform: uppercase;
-    margin-bottom: 0.2rem;
-    font-size: 1.5rem;
-    color: black;
-    text-align: center;
-      
-} 
-.player-score {
-    font-size: 1.7rem;
-}
-.player-1 { 
-    grid-area: 1 / 1 / 2 / 2;
-    /* border: 3px solid black; */
-}
-.player-2 { 
-    grid-area: 1 / 3 / 2 / 4;
-    /* border: 3px solid black; */
-}
-
-.player {
-    flex: 50%;
-    padding: 9rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: all 0.75s;
-}
-
-.player-active {
-    background-color: rgba(49, 49, 49, 0.4);
-    background-color: rgba(241, 26, 26, 0.63);
-}
-.player-active .player-label {
-    font-weight: 300;
-}
-.player-active .player-label::after {
-    content: "\2022";
-    font-size: 70px;
-    position: absolute;
-    color:rgb(6, 156, 6);
-    color:black;
-    left: 5px;
-    top: -32px;
-    right: -125px;
-}
-.player-active .player-score {
-    font-weight: 400;
-} 
-.player-active .ctrl-container {
-    opacity: 1;
-}
-/* ------ Buttons------- */
-.input-container { 
-    grid-area: 1 / 2 / 2 / 3;
-    position: relative;
-    /* border: 3px solid black; */
-}
-.btn {  
-    position: absolute;
-    transform: translateX(-50%);
-    color: rgb(24, 23, 23);
-    background: none;
-    border: none;
-    font-family: inherit;
-    font-size: 1 rem;
-    text-transform: uppercase;
-    cursor: pointer; 
-    font-weight: 400;
-    transition: all 0.2s;
-  
-    background-color: white;
-    background-color: rgba(255, 255, 255, 0.6);
-    backdrop-filter: blur(10px);
-  
-    padding: 7px 0;
-    width: 100px;
-    border-radius: 50px;
-    box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1); 
-}
-.btn:active {
-    transform: translate(-50%, 3px);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
-}
-.btn:focus {
-    outline: none;
-} 
-.btn-modal {
-    background-color: rgb(184, 15, 15);
-    color: white;
-    margin-top: 5px;
-}
-.btn-new-game {
-    top: 5%;
-    visibility: visible;
-}
-.btn-next {
-    top: 5%;
-    visibility: hidden;
-    
-}
-.btn-reset {     
-    top: 55%;
-    margin-bottom:  4px;
-}
-
