--- a/pruebas/prueba.css
+++ b/pruebas/prueba.css
@@ -1,33 +1,47 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;  
+    box-sizing: border-box; 
+   
+    
 }
 body {
     background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-    overflow: hidden;
-    font-family: Open Sans;
-    font-weight: 600;
-    color: rgb(44, 43, 43);
+    /* overflow: hidden; */
     position: relative;
+    font-family: 'Kanit', sans-serif;
+    color: black;
+    
+    position: relative; 
     height: 100vh;
-    width: 70%; 
+    width: 60%;
     margin: 0 auto;
     /* border: 2px solid #db0adbcc; */
 }
 header {   
-    /* border: 2px solid blue; */
-    border-radius: 5px;
+    /*border: 2px solid blue; */
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    font-size: 30px;
+    /* height: 20%;    */
+    width: 60%;
+    margin: 20px auto;  
+    border-radius: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2px;
+    box-shadow: 0px 5px 5px 0px rgb(0, 0, 0, 0.5);
+}
+.title {
     font-family: 'Kanit', sans-serif;
     text-align: center;
-    color: rgb(44, 43, 43);;
-    font-size: 30px;
-    height: 15%;
-    position: relative;
+    color: black; 
+    width: auto;
+    margin: 0px auto;
 }
 main {
     /* border: 2px solid blue; */
-    height: 85%;
+    height: 80%;
     display: grid;
     grid-template-columns: 25% auto 25%;
     position:relative;
@@ -35,19 +49,46 @@ main {
 
 
 /* .right-container { border: 2px solid red;} */
-/* .center-container { border: 2px solid blue;} */
-/* .game-container {border: 2px solid black;}  */
 
 
+.game-container {
+    /* border: 2px solid red; */
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+.center-container {
+    /* border: 2px solid blue;  */
+    display: flex; 
+    flex-direction: column;
+    justify-content:flex-start; 
+}
+.player-container { 
+    font-family: 'Kanit', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:flex-end;
+    /* transform-style: preserve-3d;
+    transition: all 0.9s ease; */
+    
+}
+.input-container {
+    /* border: 2px solid limegreen;  */
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-end;
+}
 /* <!-- ========== GAME CONTAINER ========== --> */
 .boxes-container {
-    height: 60vh;
-    width: 60vh;
+    height: 55vh;
+    width: 55vh;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    margin: 15px auto;
-
+    margin: 20px;
+    /* border: 3px solid green; */
 }
 .box {
     border: 3px solid black;
@@ -111,28 +152,27 @@ main {
     margin: 7%;
 }
 /* <!-- ========== PLAYER CONTAINER ========== --> */
-.player-container { 
-    font-family: 'Kanit', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content:flex-end;
-}
-.player-img { 
+
+.active-img { 
     border: 2px solid lime;
     border-radius: 10px;
     height:15vh;
     width: 15vh;
     margin: 10px auto;
+    visibility: hidden;
+    /* transition: all ease; */
+    /* transform: rotateY(180deg); */
 }
 .player {
     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
-    border-radius: 5px;
+    border-radius: 50px;
     color: black;
     text-align: center;
-    width: 90%;
-    margin-bottom: 20%;
+    width: 100%;
     padding: 3px;
+    margin-bottom: 20%;
+    box-shadow: 0px 5px 5px 0px rgb(0, 0, 0, 0.5);
+    
 }
 .player-label {
     font-family: 'Kanit', sans-serif;
@@ -143,36 +183,38 @@ main {
 } 
 .player-score {
     font-family: Open Sans;
+    font-family: 'Kanit', sans-serif;
     font-size: 1.8rem;
 }
 /* <!-- ========== BUTTON CONTAINER ========== --> */
-.btn-container { 
-    font-family: 'Kanit', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content:flex-end;
-}
-.input-container {
+
+.btn-container {
     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
     border-radius: 5px;
     color: black;
     text-align: center;
-    width: 0px auto;
-    margin-bottom: 20%;
+    width: auto;  
     padding: 3px;
-    
+    display: flex;
+    flex-direction: column;
+    align-self:center;
+    margin-bottom: 10%;
+    border-radius: 50px;
+    padding: 10px;   
+    box-shadow: 0px 5px 5px 0px rgb(0, 0, 0, 0.5); 
 }
 
-/* .btn {  
-    position: absolute;
-    transform: translateX(-50%);
+
+.btn {  
+    transform: translateX(-0%);
     color: rgb(24, 23, 23);
     background: none;
     border: none;
-    font-family: inherit;
-    font-size: 1 rem;
+    font-family: 'Kanit', sans-serif;
+
+    font-size: 1.2rem;
     text-transform: uppercase;
+    
     cursor: pointer; 
     font-weight: 400;
     transition: all 0.2s;
@@ -181,13 +223,34 @@ main {
     background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(10px);
   
-    padding: 7px 0;
-    width: 100px;
+    padding: 8px;
+    width: 100%;
+    /* margin: 5px auto; */
     border-radius: 50px;
     box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1); 
-} */
-/* ------------Modal Container--------------- */
+    align-self: center;
+}
+.btn:active {
+    transform: translate(-0%, 3px);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+}
+.btn:focus {
+    outline: none;
+} 
+.btn-new-game {
+    /* align-self:center; */
+    /* top: 5%; */
+    visibility: visible;
+    /* visibility: hidden; */
+}
+.btn-reset {   
+    position: absolute;
+    visibility: hidden;
+    /* visibility: visible;    */
+}
+/* <!-- ========== Modal Container ========== --> */
 .modal-container {
+    
     opacity: 0;
     visibility: hidden;
     position: fixed;
@@ -201,95 +264,95 @@ main {
     justify-content: center;
     align-items: center;
 }
-.modal-close {
-    transform: translateY(-200%);
-}
-.close {
-    position: absolute;
-    display: inline-block;
-    top: 5px;
-    right: 5px;
-    width: 25px;
-    height: 25px;
-    background: #c44a4c;
-    color: white;
-    line-height: 25px;
-    cursor: pointer;
-    border-radius: 50%;
-}
-
 .modal {
     background-image: linear-gradient(to top left, #f1eff1 0%, #dddada 100%);
     width: 40%;
     height: 60%;
     text-align: center;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     /* justify-content:space-evenly; */
     position: relative;
     transition: transform 1s;
     transform: translateY(0%);
     border-radius: 10px;
+    /* border: 2px solid black;  */
+}
+.modal-close {
+    transform: translateY(-200%);
     /* border: 2px solid blue;  */
 }
+
 .modal-title {
-    margin-bottom: 0%;
-    /* border: 2px solid black; 
-    border-radius: 5px; */
-}
-
-.modal-title > h1 {
     font-family: 'Kanit', sans-serif;
-    font-size: 60px;
+    font-size: 25px;
     text-align: center;
-    margin-bottom: 0px;
-    /* border: 2px solid green; */
+    height: 20%;
+    /* border: 2px solid blue;  */
 }
+.modal-text {
+    /* border: 2px solid red; */
+    font-family: Open Sans;
+    font-weight: 600;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
 
-.modal-msg > h2 {
-    font-family: 'Kanit', sans-serif;
-    font-size: 25px;    
-    text-align: center;
-    position: flex;
-    justify-content: center; 
-    align-items: center;
 }
-/* .first-player {
-    position: relative;
-    top:0px;
-    margin: 0px;
-    /* border: 2px solid blue; 
+.modal-msg{
+    height: 20%;
+    /* border: 2px solid blue;  */
+}
+.first-player {
+    font-family: 'Kanit', sans-serif;
+    /* font-size: 20px; */
+    margin: 0px auto;
+    /* border: 2px solid blue;  */
+}
+/* .modal-msg :nth-child(2) {
+    font-family: 'Kanit', sans-serif;
+    font-size: 30px;
+    /* margin: 0px auto; */
+    /* border: 2px solid blue;  
 } */
-
 .modal-img {
+    /* border: 2px solid rgb(223, 19, 206);  */
+    height: 55%;
     width: 60%;
     margin: 0px auto;
-    position: relative;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 130px;
-}
-.modal-img > img {
-    height: 70%;
-    margin: auto;
-    cursor: pointer; 
-    padding: 3px;
-    border-radius: 10px;  
-
-}
-.modal-img > img:hover {
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 90% 10%;
     align-items: center;
-    height: 100%;
+    justify-items:center;
+    text-align: center;
+    
+}
+.modal-img :nth-child(3) { grid-column: 1 / spam 2;
+    /* border: 2px solid lime; */
+}
+.modal-img :nth-child(1),
+.modal-img :nth-child(2) {
+    height: 70%;
+    width: 70%;
+    margin: 15px;
+    /* border: 2px solid lime; */
+    
+}
+.modal-img :nth-child(1):hover,
+.modal-img :nth-child(2):hover {
+    align-items: center;
+    height: 90%;
+    width: 90%;
     padding: 3px;
-    border: 2px solid lime;
+    /* background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%); */
+    border: 2px solid #ff0846b2;
     border-radius: 10px;
     cursor: pointer; 
 }
 
-.modal-close {
-    transform: translateY(-200%);
-}
-.close {
+
+.btn-close-modal {
     position: absolute;
     display: inline-block;
     top: 5px;
@@ -301,4 +364,20 @@ main {
     line-height: 25px;
     cursor: pointer;
     border-radius: 50%;
+    /* border: 2px solid blue;  */
+}
+.btn-modal-container {
+    /* border: 2px solid orangered; */
+    height: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+}
+.btn-modal-container :nth-child(1) {
+    height: 70%;
+    margin: 5px auto;    
+    padding: 0px 10px;
+    justify-content:center;
+    align-items: center;
 }
