--- a/styleTicTac.css
+++ b/styleTicTac.css
@@ -183,7 +183,7 @@ span {
     position: relative;
     top:0px;
     margin: 0px;
-    /* border: 2px solid blue; 
+    border: 2px solid blue; 
 } */
 
 .modal-img {
