--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 body {
     background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-    /* overflow: hidden; */
+    overflow: hidden;
     position: relative;
     font-family: 'Kanit', sans-serif;
     color: black;    
@@ -491,15 +491,5 @@ main {
 } 
 .modal-close {
     transform: translateY(-200%);
-}
-
-@media (orientation:portrait) {
-    header {
-        width: auto;
-    }
-    main {
-        width: 20%;
-    }
-    
 }
 
